--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,59 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+/** Menu animation */
+
+@keyframes disabled-button {
+  0% {
+    margin-left: -20px;
+  }
+
+  100% {
+    margin-left: -16px;
+  }
+}
+
+/**Heart animation*/
+
+.like-icon.is-liked .heart {
+  animation: scale 0.3s linear;
+  animation-delay: 0.1s;
+  transform-origin: center;
+}
+
+@keyframes scale {
+  from {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.5);
+  }
+
+  to {
+    transform: scale(1);
+  }
+}
+
+/**Sparks animation*/
+
+.like-icon.is-liked .sparks {
+  animation: spark 0.3s linear backwards;
+  animation-delay: 0.3s;
+  transform-origin: center;
+}
+
+@keyframes spark {
+  from {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 100;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
